[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/dice/simpledice.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Dices.gd" type="Script" id=2]
[ext_resource path="res://assets/dice/enemy/snake_dice.png" type="Texture" id=3]
[ext_resource path="res://assets/dice/weapon/fists_dice.png" type="Texture" id=4]
[ext_resource path="res://assets/dice/ability/invisibility_dice.png" type="Texture" id=5]
[ext_resource path="res://assets/dice/ability/speedup_dice.png" type="Texture" id=6]
[ext_resource path="res://assets/dice/ability/walking_dice.png" type="Texture" id=7]
[ext_resource path="res://assets/dice/ability/walls_dice.png" type="Texture" id=8]
[ext_resource path="res://assets/dice/enemy/mummy_dice.png" type="Texture" id=9]
[ext_resource path="res://assets/dice/weapon/bow_dice.png" type="Texture" id=10]
[ext_resource path="res://assets/dice/enemy/tribeman_dice.png" type="Texture" id=11]
[ext_resource path="res://assets/dice/ability/dashing_dice.png" type="Texture" id=12]
[ext_resource path="res://assets/dice/ability/extrahp_dice.png" type="Texture" id=13]
[ext_resource path="res://assets/dice/enemy/skeleton_dice.png" type="Texture" id=14]
[ext_resource path="res://assets/dice/weapon/sniperrifle_dice.png" type="Texture" id=15]
[ext_resource path="res://assets/dice/weapon/ariffle_dice.png" type="Texture" id=16]
[ext_resource path="res://assets/dice/weapon/knife_dice.png" type="Texture" id=17]
[ext_resource path="res://assets/dice/enemy/th_dice.png" type="Texture" id=18]
[ext_resource path="res://assets/dice/weapon/shotgun_dice.png" type="Texture" id=19]
[ext_resource path="res://assets/dice/enemy/witch_dice.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 6 ) ],
"loop": true,
"name": "ability_dices",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "gun_dices",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 14 ) ],
"loop": true,
"name": "enemies_dices",
"speed": 5.0
} ]

[node name="Dices" type="Node2D"]
script = ExtResource( 2 )
next_scene_path = "res://src/Scenes/Levels/TestingLevel.tscn"

[node name="AbilityDice" type="AnimatedSprite" parent="."]
position = Vector2( 150, 250 )
frames = SubResource( 1 )

[node name="GunDice" type="AnimatedSprite" parent="."]
position = Vector2( 500, 250 )
frames = SubResource( 2 )

[node name="EnemiesDice" type="AnimatedSprite" parent="."]
position = Vector2( 850, 250 )
frames = SubResource( 3 )

[node name="AbilityTimer" type="Timer" parent="."]
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemiesTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AbilityTimer" to="." method="_on_AbilityTimer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="EnemiesTimer" to="." method="_on_EnemiesTimer_timeout"]
